[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
#
# > If you are using a virtual workspace, you will still need to explicitly set the resolver field in the [workspace]
#   definition if you want to opt-in to the new resolver.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = [
  "e2e",
  "examples/codec",
  "examples/contracts",
  "examples/cookbook",
  "examples/debugging",
  "examples/macros",
  "examples/predicates",
  "examples/providers",
  "examples/rust_bindings",
  "examples/types",
  "examples/wallets",
  "packages/fuels",
  "packages/fuels-accounts",
  "packages/fuels-code-gen",
  "packages/fuels-core",
  "packages/fuels-macros",
  "packages/fuels-programs",
  "packages/fuels-test-helpers",
  "scripts/checks",
  "scripts/versions-replacer",
  "wasm-tests",
]

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
rust-version = "1.76.0"
version = "0.61.0"

[workspace.dependencies]
Inflector = { version = "0.11.4", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
bech32 = { version = "0.9.1", default-features = false }
bytes = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.5", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
eth-keystore = { version = "0.5.0", default-features = false }
fuel-abi-types = { version = "0.4.0", default-features = false }
futures = { version = "0.3.29", default-features = false }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.12.0", default-features = false }
portpicker = { version = "0.1.1", default-features = false }
proc-macro2 = { version = "1.0.70", default-features = false }
quote = { version = "1.0.33", default-features = false }
rand = { version = "0.8.5", default-features = false }
regex = { version = "1.10.2", default-features = false }
semver = { version = "1.0.20", default-features = false }
serde = { version = "1.0.193", default-features = false }
serde_json = { version = "1.0.108", default-features = false }
serde_with = { version = "3.4.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
syn = { version = "2.0.39", default-features = false }
tai64 = { version = "4.0.0", default-features = false }
tempfile = { version = "3.8.1", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.34.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
trybuild = { version = "1.0.85", default-features = false }
uint = { version = "0.9.5", default-features = false }
which = { version = "6.0.0", default-features = false }
zeroize = { version = "1.7.0", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false }
walkdir = { version = "2.5", default-features = false }
tokio-util = { version = "0.7", default-features = false }
nix = { version = "0.28", default-features = false }
anyhow = { version = "1.0", default-features = false }
getrandom = { version = "0.2", default-features = false }
wasm-bindgen-test = { version = "0.3", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
colored = { version = "2.1", default-features = false }
duct = { version = "0.13", default-features = false }

# Dependencies from the `fuel-core` repository:
fuel-core = { version = "0.26.0", default-features = false }
fuel-core-chain-config = { version = "0.26.0", default-features = false }
fuel-core-client = { version = "0.26.0", default-features = false }
fuel-core-poa = { version = "0.26.0", default-features = false }
fuel-core-services = { version = "0.26.0", default-features = false }
fuel-core-types = { version = "0.26.0", default-features = false }

# Dependencies from the `fuel-vm` repository:
fuel-asm = { version = "0.49.0", default-features = false }
fuel-crypto = { version = "0.49.0", default-features = false }
fuel-merkle = { version = "0.49.0", default-features = false }
fuel-storage = { version = "0.49.0", default-features = false }
fuel-tx = { version = "0.49.0", default-features = false }
fuel-types = { version = "0.49.0", default-features = false }
fuel-vm = { version = "0.49.0", default-features = false }

# Workspace projects
fuels = { version = "0.61.0", path = "./packages/fuels", default-features = false }
fuels-accounts = { version = "0.61.0", path = "./packages/fuels-accounts", default-features = false }
fuels-code-gen = { version = "0.61.0", path = "./packages/fuels-code-gen", default-features = false }
fuels-core = { version = "0.61.0", path = "./packages/fuels-core", default-features = false }
fuels-macros = { version = "0.61.0", path = "./packages/fuels-macros", default-features = false }
fuels-programs = { version = "0.61.0", path = "./packages/fuels-programs", default-features = false }
fuels-test-helpers = { version = "0.61.0", path = "./packages/fuels-test-helpers", default-features = false }
