[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
#
# > If you are using a virtual workspace, you will still need to explicitly set the resolver field in the [workspace]
#   definition if you want to opt-in to the new resolver.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = [
  "e2e",
  "examples/codec",
  "examples/contracts",
  "examples/cookbook",
  "examples/debugging",
  "examples/macros",
  "examples/predicates",
  "examples/providers",
  "examples/rust_bindings",
  "examples/types",
  "examples/wallets",
  "packages/fuels",
  "packages/fuels-accounts",
  "packages/fuels-code-gen",
  "packages/fuels-core",
  "packages/fuels-macros",
  "packages/fuels-programs",
  "packages/fuels-test-helpers",
  "scripts/check-docs",
  "scripts/fuel-core-version",
  "scripts/versions-replacer",
  "wasm-tests",
]

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
rust-version = "1.79.0"
version = "0.66.2"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
bech32 = "0.9.1"
bytes = { version = "1.5.0", default-features = false }
chrono = "0.4.31"
elliptic-curve = { version = "0.13.8", default-features = false }
eth-keystore = "0.5.0"
flate2 = { version = "1.0", default-features = false }
fuel-abi-types = "0.7.0"
futures = "0.3.29"
hex = { version = "0.4.3", default-features = false }
itertools = "0.12.0"
portpicker = "0.1.1"
pretty_assertions = { version = "1.4", default-features = false }
proc-macro2 = "1.0.70"
quote = "1.0.33"
rand = { version = "0.8.5", default-features = false, features = [
  "std_rng",
  "getrandom",
] }
regex = "1.10.2"
reqwest = { version = "0.12", default-features = false }
semver = "1.0.20"
serde = { version = "1.0.193", default-features = false }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
syn = "2.0.39"
tai64 = { version = "4.0.0", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.8.1", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.34.0", default-features = false }
tracing = "0.1.40"
trybuild = "1.0.85"
uint = { version = "0.9.5", default-features = false }
which = { version = "6.0.0", default-features = false }
zeroize = "1.7.0"

# Dependencies from the `fuel-core` repository:
fuel-core = { path = "../fuel-core/crates/fuel-core/", default-features = false, features = [
  "wasm-executor",
] }
fuel-core-chain-config = { path = "../fuel-core/crates/chain-config/", default-features = false }
fuel-core-client = { path = "../fuel-core/crates/client/", default-features = false } #TODO: remove this @hal3e
fuel-core-poa = { path = "../fuel-core/crates/services/consensus_module/poa", default-features = false }
fuel-core-services = { path = "../fuel-core/crates/services/", default-features = false }
fuel-core-types = { path = "../fuel-core/crates/types/", default-features = false }

# Dependencies from the `fuel-vm` repository:
fuel-asm = { path = "../fuel-vm/fuel-asm" }
fuel-crypto = { path = "../fuel-vm/fuel-crypto" }
fuel-merkle = { path = "../fuel-vm/fuel-merkle" }
fuel-storage = { path = "../fuel-vm/fuel-storage" }
fuel-tx = { path = "../fuel-vm/fuel-tx" }
fuel-types = { path = "../fuel-vm/fuel-types" }
fuel-vm = { path = "../fuel-vm/fuel-vm" }

# Workspace projects
fuels = { version = "0.66.2", path = "./packages/fuels", default-features = false }
fuels-accounts = { version = "0.66.2", path = "./packages/fuels-accounts", default-features = false }
fuels-code-gen = { version = "0.66.2", path = "./packages/fuels-code-gen", default-features = false }
fuels-core = { version = "0.66.2", path = "./packages/fuels-core", default-features = false }
fuels-macros = { version = "0.66.2", path = "./packages/fuels-macros", default-features = false }
fuels-programs = { version = "0.66.2", path = "./packages/fuels-programs", default-features = false }
fuels-test-helpers = { version = "0.66.2", path = "./packages/fuels-test-helpers", default-features = false }
versions-replacer = { version = "0.66.2", path = "./scripts/versions-replacer", default-features = false }
