[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
#
# > If you are using a virtual workspace, you will still need to explicitly set the resolver field in the [workspace]
#   definition if you want to opt-in to the new resolver.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = [
  "e2e",
  "examples/codec",
  "examples/contracts",
  "examples/cookbook",
  "examples/debugging",
  "examples/macros",
  "examples/predicates",
  "examples/providers",
  "examples/rust_bindings",
  "examples/types",
  "examples/wallets",
  "packages/fuels",
  "packages/fuels-accounts",
  "packages/fuels-code-gen",
  "packages/fuels-core",
  "packages/fuels-macros",
  "packages/fuels-programs",
  "packages/fuels-test-helpers",
  "scripts/check-docs",
  "scripts/fuel-core-version",
  "scripts/versions-replacer",
  "scripts/change-log",
  "wasm-tests",
]

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
rust-version = "1.81.0"
version = "0.70.0"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
bech32 = "0.9.1"
bytes = { version = "1.5.0", default-features = false }
chrono = "0.4.31"
cynic = { version = "3.1.0", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
test-case = { version = "3.3", default-features = false }
eth-keystore = "0.5.0"
flate2 = { version = "1.0", default-features = false }
fuel-abi-types = "0.8.0"
futures = "0.3.29"
hex = { version = "0.4.3", default-features = false }
itertools = "0.12.0"
portpicker = "0.1.1"
pretty_assertions = { version = "1.4", default-features = false }
proc-macro2 = "1.0.70"
quote = "1.0.33"
rand = { version = "0.8.5", default-features = false, features = [
  "std_rng",
  "getrandom",
] }
regex = "1.10.2"
reqwest = { version = "0.12", default-features = false }
semver = "1.0.20"
serde = { version = "1.0.193", default-features = false }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
syn = "2.0.39"
tai64 = { version = "4.0.0", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.8.1", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.34.0", default-features = false }
tracing = "0.1.40"
trybuild = "1.0.85"
uint = { version = "0.9.5", default-features = false }
which = { version = "6.0.0", default-features = false }
zeroize = "1.7.0"
octocrab = { version = "0.39", default-features = false }
dotenv = { version = "0.15", default-features = false }
toml = { version = "0.8", default-features = false }
mockall = { version = "0.13", default-features = false }

# Dependencies from the `fuel-core` repository:
fuel-core = { version = "0.41.3", default-features = false, features = [
  "wasm-executor",
] }
fuel-core-chain-config = { version = "0.41.3", default-features = false }
fuel-core-client = { version = "0.41.3", default-features = false }
fuel-core-poa = { version = "0.41.3", default-features = false }
fuel-core-services = { version = "0.41.3", default-features = false }
fuel-core-types = { version = "0.41.3", default-features = false }

# Dependencies from the `fuel-vm` repository:
fuel-asm = { version = "0.59.1" }
fuel-crypto = { version = "0.59.1" }
fuel-merkle = { version = "0.59.1" }
fuel-storage = { version = "0.59.1" }
fuel-tx = { version = "0.59.1" }
fuel-types = { version = "0.59.1" }
fuel-vm = { version = "0.59.1" }

# Workspace projects
fuels = { version = "0.70.0", path = "./packages/fuels", default-features = false }
fuels-accounts = { version = "0.70.0", path = "./packages/fuels-accounts", default-features = false }
fuels-code-gen = { version = "0.70.0", path = "./packages/fuels-code-gen", default-features = false }
fuels-core = { version = "0.70.0", path = "./packages/fuels-core", default-features = false }
fuels-macros = { version = "0.70.0", path = "./packages/fuels-macros", default-features = false }
fuels-programs = { version = "0.70.0", path = "./packages/fuels-programs", default-features = false }
fuels-test-helpers = { version = "0.70.0", path = "./packages/fuels-test-helpers", default-features = false }
versions-replacer = { version = "0.70.0", path = "./scripts/versions-replacer", default-features = false }
