[package]
name = "e2e"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dev-dependencies]
# used in test assertions
chrono = { workspace = true }
# needs to be removed, `ScriptTransaction` and `CreateTransaction` in `fuels` use `fuel_tx::Input` but don't reexport or convert it into a `fuels` owned type
fuel-tx = { workspace = true }
fuels = { workspace = true }
# because setup-program-test uses it but `fuels` did not reexport `rand`
rand = { workspace = true }
# used in test assertions
tai64 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
fuel-core-lib = ["fuels/fuel-core-lib"]
