[package]
name = "e2e"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

build = "build.rs"

[dev-dependencies]
# used in test assertions
chrono = { workspace = true }
fuel-asm = { workspace = true }
# TODO: [issue](https://github.com/FuelLabs/fuels-rs/issues/1375) needs to be removed, `ScriptTransaction` and `CreateTransaction` in `fuels` use `fuel_tx::Input` but don't reexport or convert it into a `fuels` owned type
fuel-tx = { workspace = true }
fuels = { workspace = true }
# used in test assertions
tai64 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

itertools = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
portpicker = { workspace = true }

fuel-core-chain-config = { workspace = true, features = [
    "std",
    "test-helpers",
] }

fuel-core-types = { workspace = true, features = [
    "da-compression",
] }

testcontainers = { workspace = true }
k256 = { workspace = true, features = ["ecdsa-core"] }
aws-config = { workspace = true, features = ["rustls"] }
aws-sdk-kms = { workspace = true, features = ["rustls"] }
fuel-core-client = { workspace = true }



[build-dependencies]
anyhow = { workspace = true, features = ["std"] }
flate2 = { workspace = true, features = ["zlib"] }
fuels-accounts = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["blocking", "default-tls"] }
semver = { workspace = true }
tar = { workspace = true }

[features]
default = ["fuels/default", "coin-cache"]
fuel-core-lib = ["fuels/fuel-core-lib"]
rocksdb = ["fuels/rocksdb"]
coin-cache = ["fuels/coin-cache"]
[dependencies]
anyhow = "1.0.86"
url = "2.5.2"