[package]
name = "fuels-abi-cli"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"

[dependencies]
anyhow = "1"
core-types = { git = "ssh://git@github.com/FuelLabs/sway.git" }
fuels-core = { path = "../fuels-core" }
fuels-rs = { path = "../fuels-rs" }
hex = "0.4"
itertools = "0.10"
structopt = "0.3"
