[package]
name = "fuels-abi-cli"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK CLI tool to parse ABI."

[dependencies]
anyhow = "1"
core-types = { git = "ssh://git@github.com/FuelLabs/sway.git" }
fuels-core = { path = "../fuels-core" }
fuels-rs = { path = "../fuels-rs" }
hex = "0.4"
itertools = "0.10"
structopt = "0.3"
