[package]
name = "fuels-abi-cli"
version = "0.7.1"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK CLI tool to parse ABI."

[dependencies]
anyhow = "1"
fuels-contract = { version = "0.7.1", path = "../fuels-contract" }
fuels-core = { version = "0.7.1", path = "../fuels-core" }
hex = "0.4"
itertools = "0.10"
structopt = "0.3"
sway-types = { version = "0.8" }
