[package]
authors = ["digorithm <rodrigo.araujo@fuel.sh>"]
name = "fuels-abigen-macro"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
anyhow = "1"
bytes = { version = "1.0.1", features = ["serde"] }
forc = { git = "ssh://git@github.com/FuelLabs/sway.git", features = ["test", "util"], default-features = false }
fuels-core = { path = "../fuels-core" }
fuel-asm = { git = "ssh://git@github.com/FuelLabs/fuel-asm.git", features = ["serde-types"] }
fuel-client = { git = "ssh://git@github.com/FuelLabs/fuel-core", default-features = false }
fuel-core = { git = "ssh://git@github.com/FuelLabs/fuel-core", default-features = false }
fuel-tx = { git = "ssh://git@github.com/FuelLabs/fuel-tx.git" }
fuel-types = { git = "ssh://git@github.com/FuelLabs/fuel-types.git" }
fuel-vm = { git = "ssh://git@github.com/FuelLabs/fuel-vm.git" }
fuels-rs = { path = "../fuels-rs" }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
itertools = "0.10.1"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
regex = "1.5.4"
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = true }
sha2 = "0.9.5"
strum = "0.21"
strum_macros = "0.21"
syn = "1.0.12"
thiserror = { version = "1.0.26", default-features = false }
tokio = "1.15.0"
