[package]
name = "fuels-contract"
version = "0.7.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK contracts."

[dependencies]
anyhow = "1"
bytes = { version = "1.0.1", features = ["serde"] }
fuel-asm = { version = "0.1", features = ["serde-types"] }
fuel-core = { version = "0.4", default-features = false }
fuel-gql-client = { version = "0.4", default-features = false }
fuel-tx = "0.6"
fuel-types = "0.3"
fuel-vm = "0.5"
fuels-core = { version = "0.7.0", path = "../fuels-core" }
fuels-signers = { version = "0.7.0", path = "../fuels-signers", features = ["test-helpers"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
regex = "1.5.4"
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = true }
sha2 = "0.9.5"
strum = "0.21"
strum_macros = "0.21"
sway-types = { version = "0.1" }
sway-utils = { version = "0.1" }
thiserror = { version = "1.0.26", default-features = false }
tokio = "1.12"
