[package]
name = "fuels-core"
version = "0.1.3"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK core."

[dependencies]
fuel-tx = "0.2"
fuel-types = { version = "0.1", default-features = false }
fuel-vm = "0.2"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.124", default-features = true, features = ["derive"] }
sha2 = { version = "0.9.5", optional = true }
strum = "0.21"
strum_macros = "0.21"
thiserror = { version = "1.0.30", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[features]
default = ["fuel-types/default", "sha2"]
no-std = ["fuel-types/serde-types-minimal"]
