[package]
name = "fuels-signers"
version = "0.1.3"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK signers."

[dependencies]
async-trait = { version = "0.1.50", default-features = false }
bytes = { version = "1.1.0", features = ["serde"] }
fuel-tx = "0.2"
fuel-types = { version = "0.1", default-features = false }
fuel-vm = "0.2"
fuels-core = { version = "0.1.3", path = "../fuels-core" }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
rand = { version = "0.8.4", default-features = false }
secp256k1 = { version = "0.20", features = ["recovery"] }
serde = { version = "1.0.124", default-features = true, features = ["derive"] }
sha2 = { version = "0.9.8", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
tokio = { version = "1.10.1", features = ["full"] }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["std"] }
