[package]
name = "fuels-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuels = { path = "../packages/fuels", features = ["arbitrary"] }
fuels-accounts = { path = "../packages/fuels-accounts", features = ["arbitrary"] }
fuels-code-gen = { path = "../packages/fuels-code-gen", features = ["arbitrary"] }
fuels-core = { path = "../packages/fuels-core", features = ["arbitrary"] }
fuels-macros = { path = "../packages/fuels-macros", features = ["arbitrary"] }
fuels-programs = { path = "../packages/fuels-programs", features = ["arbitrary"] }
fuels-test-helpers = { path = "../packages/fuels-test-helpers", features = ["arbitrary"] }


[profile.release]
debug = true

[[bin]]
name = "abi_decoder"
path = "fuzz_targets/abi_decoder.rs"
test = false
doc = false
[[bin]]
name = "abi_encoder"
path = "fuzz_targets/abi_encoder.rs"
test = false
doc = false
[[bin]]
name = "vector_of_param_type"
path = "fuzz_targets/vector_of_param_type.rs"
test = false
doc = false
[[bin]]
name = "boxed_param_type"
path = "fuzz_targets/boxed_param_type.rs"
test = false
doc = false
