[package]
name = "fuels-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
#arbitrary = "1.3.2"
libfuzzer-sys = "0.4"
fuels = { path = "../packages/fuels", features = ["default", "arbitrary"] }
#fuels-accounts = { path = "../packages/fuels-accounts", features = ["arbitrary"] }
#fuels-code-gen = { path = "../packages/fuels-code-gen", features = ["arbitrary"] }
#fuels-core = { path = "../packages/fuels-core", features = ["arbitrary"] }
#fuels-macros = { path = "../packages/fuels-macros", features = ["arbitrary"] }
#fuels-programs = { path = "../packages/fuels-programs", features = ["arbitrary"] }
#fuels-test-helpers = { path = "../packages/fuels-test-helpers", features = ["arbitrary"] }
#fuel-types = { path = "../../fuel-vm/fuel-types", features = ["arbitrary"] }


[profile.release]
debug = true

[[bin]]
name = "abi_decoder"
path = "fuzz_targets/abi_decoder.rs"
test = false
doc = false
[[bin]]
name = "abi_encoder"
path = "fuzz_targets/abi_encoder.rs"
test = false
doc = false
[[bin]]
name = "vector_of_param_type"
path = "fuzz_targets/vector_of_param_type.rs"
test = false
doc = false
[[bin]]
name = "boxed_param_type"
path = "fuzz_targets/boxed_param_type.rs"
test = false
doc = false

[patch.crates-io]
# fuel-asm = { path = "../../fuel-vm/fuel-asm" }
# fuel-crypto = { path = "../../fuel-vm/fuel-crypto" }
# fuel-merkle = { path = "../../fuel-vm/fuel-merkle" }
# fuel-storage = { path = "../../fuel-vm/fuel-storage" }
fuel-tx = { path = "../../fuel-vm/fuel-tx" }
fuel-types = { path = "../../fuel-vm/fuel-types" }
fuel-vm = { path = "../../fuel-vm/fuel-vm" }
# #fuel-core = { path = "../../fuel-core/crates/fuel-core" }
# fuel-core-chain-config = { path = "../../fuel-core/crates/chain-config" }
# fuel-core-client = { path = "../../fuel-core/crates/client" }
# fuel-core-poa = { path = "../../fuel-core/crates/services/consensus_module/poa" }
# fuel-core-services = { path = "../../fuel-core/crates/services" }
# fuel-core-types = { path = "../../fuel-core/crates/types" }
# fuel-core-storage = { path = "../../fuel-core/crates/storage" }
