[package]
name = "fuels-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuels = { path = "../packages/fuels", features = ["default", "arbitrary"] }


[profile.release]
debug = true

[[bin]]
name = "receipt_parser"
path = "fuzz_targets/receipt_parser.rs"
test = false
doc = false
[[bin]]
name = "abi_encoder"
path = "fuzz_targets/abi_encoder.rs"
test = false
doc = false
[[bin]]
name = "vector_of_param_type"
path = "fuzz_targets/vector_of_param_type.rs"
test = false
doc = false
[[bin]]
name = "boxed_param_type"
path = "fuzz_targets/boxed_param_type.rs"
test = false
doc = false

[patch.crates-io]
fuel-tx = { path = "../../fuel-vm/fuel-tx" }
fuel-types = { path = "../../fuel-vm/fuel-types" }
fuel-vm = { path = "../../fuel-vm/fuel-vm" }
fuel-asm = { path = "../../fuel-vm/fuel-asm" }
