[package]
name = "wasm-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ['cdylib']

[dev-dependencies]
fuels = { workspace = true }
fuels-core = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen-test = { workspace = true }
