[package]
name = "wasm-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ['cdylib']

[dev-dependencies]
fuels = { workspace = true }
fuels-core = { workspace = true }
getrandom = { version = "0.2.11", features = ["js"] }
hex = { workspace = true }
wasm-bindgen-test = "0.3.39"
