[package]
name = "fuels-example-abigen"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK abigen examples."

[dev-dependencies]
fuels = { workspace = true }
tokio = { workspace = true, features = ["full"] }
