[package]
name = "fuels-example-contracts"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Fuel Labs <contact@fuel.sh>"]
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK contract examples."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuels = { version = "0.28.0", path = "../../packages/fuels" }
rand = "0.8"
tokio = { version = "1.10", features = ["full"] }

[features]
fuel-core-lib = ["fuels/fuel-core-lib"]
