[package]
name = "fuels-example-contracts"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK contract examples."

[dev-dependencies]
fuels = { workspace = true, features = [
  "std",
  "test-helpers",
  "fuel-core-lib",
] }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
fuel-core-lib = ["fuels/fuel-core-lib"]
rocksdb = ["fuels/rocksdb"]
