[package]
name = "fuels-example-debugging"
publish = false
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK debugging examples."

[dependencies]
fuels = { version = "0.29.0", path = "../../packages/fuels" }
rand = "0.8.5"
tokio = { version = "1.10", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.86"
anyhow = "1.0.65"
