[package]
name = "fuels-example-debugging"
publish = false
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK debugging examples."

[dependencies]
# TODO: Revert this once https://github.com/FuelLabs/fuel-abi-types/pull/7 is merged and a release is done.
#fuel-abi-types="0.1.0"
fuel-abi-types = { git = "https://github.com/FuelLabs/fuel-abi-types", branch = "segfault_magnet_hal3e/Abigen_migration" }
fuels = { version = "0.33.0", path = "../../packages/fuels" }
rand = "0.8.5"
tokio = { version = "1.10", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.86"
anyhow = "1.0.65"
