[package]
name = "fuels-example-debugging"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK debugging examples."

[dev-dependencies]
fuel-abi-types = { workspace = true }
fuels = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
